fixed layout issues

--- a/blog/blog.css
+++ b/blog/blog.css
@@ -45,13 +45,14 @@ header {
 }
 #grid {
   display: grid;
-  grid-template-columns: auto auto auto;
+  grid-template-columns: auto 1fr auto;
   grid-template-rows: auto auto;
   column-gap: 15px;
 }
 .magyk-review {
   grid-column: 1/2;
   margin-left: 15px;
+  width: 200px;
 }
 .magyk-info {
   grid-column: 2/3;
@@ -59,16 +60,28 @@ header {
 .magnus-review {
   grid-column: 1/2;
   margin-left: 15px;
+  width: 200px;
 }
 .mangus-info {
   grid-column: 2/3;
+}
+img {
+  display: block;
+  margin: 0 auto;
+  padding-top: 15px;
+  padding-bottom: 15px;
+}
+.book-info h2 {
+  margin: 0 auto;
 }
 .filters {
   outline: 2px solid var(--outline);
   grid-column: 3/4;
   grid-row: 1/3;
   padding: 10px;
+  width: 300px;
   margin-right: 15px;
+  margin-bottom: 15px;
 }
 .skiptocontent a {
   position: absolute;
